add testimonial style

--- a/source/views/_header.html.slim
+++ b/source/views/_header.html.slim
@@ -1,1 +1,1 @@
-/ = image_tag 'weelab-logo-transparent.png', alt: 'logo Weelab', width: '100px'
+= image_tag 'weelab-logo-transparent.png', alt: 'logo Weelab', width: '100px'
