--- a/source/stylesheets/_fonts.scss
+++ b/source/stylesheets/_fonts.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 
+body{
+  font-family: 'Lato', sans-serif;
+}
+
 h1, h2, h3, h4{
   font-family: 'Lato', sans-serif;
 }
