--- a/source/stylesheets/_landing.scss
+++ b/source/stylesheets/_landing.scss
@@ -6,7 +6,7 @@ $margin-bottom: 2%;
 
 #landing{
   height: 100vh;
-  margin: 5% 15%;
+  margin: 0 15%;
 }
 
 #lighthouse{
@@ -28,7 +28,7 @@ $margin-bottom: 2%;
   font-size: 2em;
   color: #fafafa;
   text-shadow: 1px 1px 1px #6a6a6a;
-  padding-top: 10%;
+  padding-top: 70px;
 }
 
 #go-to-typeform{
