list for testimonials

--- a/source/stylesheets/_testimonial.scss
+++ b/source/stylesheets/_testimonial.scss
@@ -3,8 +3,8 @@ ul#testimonials{
   position: absolute;
   display: flex;
   align-items: center;
-  right: 10%;
   bottom: $margin-bottom;
+  right: 5%;
   width: 50%;
   max-width: 500px;
 }
@@ -14,6 +14,7 @@ ul#testimonials{
   background-color: #fafafa;
   border-radius: 4px;
   padding: 10px;
+  margin-top: 30px;
   flex: 1 0 auto;
   &-navigation{
     flex: 0 0 10%;
