--- a/source/views/_landing.html.slim
+++ b/source/views/_landing.html.slim
@@ -10,17 +10,15 @@
         = t :call_to_action
 
   ul#testimonials
-    = image_tag 'icons/chevron-left.svg', class: 'testimonial-navigation'
-    li.testimonial
-      .testimonial-description Un savoir faire tech associé à un entrain communicatif. Travailler avec Guillaume c'est s'assurer une conduite et une exécution projet rigoureuse dans un cadre détendu et toujours positif.
-      .testimonial-author
-        .author-name Pierre Facq
-        .author-position
-          | Driver @ Le Wagon Nantes
+    - data.testimonial_authors.each do |author|
+      li.testimonial
+        .testimonial-description = author.testimonial
+        .testimonial-author
+          .author-name = author.name
+          .author-position = author.position
 
-      = image_tag 'pictures/pierre_facq.jpg', class: 'author-picture'
+        = image_tag "pictures/#{author.picture}", class: 'author-picture'
   
-    = image_tag 'icons/chevron-right.svg', class: 'testimonial-navigation'
         
   / // Drawings
   #lighthouse = image_tag('icons/lighthouse.svg')
