--- a/source/views/_landing.html.slim
+++ b/source/views/_landing.html.slim
@@ -9,16 +9,19 @@
         = image_tag 'icons/chat.svg', width: '15%'
         = t :call_to_action
 
-  ul#testimonials
-    - data.testimonial_authors.each do |author|
-      li.testimonial
-        .testimonial-description = author.testimonial
-        .testimonial-author
-          .author-name = author.name
-          .author-position = author.position
+  #testimonials
+    = image_tag 'icons/chevron-left.svg', class: 'testimonial-navigation slide-previous slides-navigation'
+    ul#slides
+      - data.testimonial_authors.each_with_index do |author, index|
+        li class="testimonial #{index == 0 ? 'active' : 'hidden'}"
+          .testimonial-description = author.testimonial
+          .testimonial-author
+            .author-name = author.name
+            .author-position = author.position
 
-        = image_tag "pictures/#{author.picture}", class: 'author-picture'
-  
+          = image_tag "pictures/#{author.picture}", class: 'author-picture'
+    = image_tag 'icons/chevron-right.svg', class: 'testimonial-navigation slide-next slides-navigation'
+
         
   / // Drawings
   #lighthouse = image_tag('icons/lighthouse.svg')
