--- a/source/stylesheets/_utilities.scss
+++ b/source/stylesheets/_utilities.scss
@@ -1,3 +1,16 @@
 .underline{
   text-decoration: underline;
 }
+
+.typeform-share{
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.no-bullet{
+  list-style: none;
+  padding: 0;
+}
+.hidden{
+  display:none;
+}
