--- a/source/stylesheets/_utilities.scss
+++ b/source/stylesheets/_utilities.scss
@@ -1,3 +1,13 @@
+html{
+  height: 100%;
+}
+
+body{
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 70px;
+}
+
 .underline{
   text-decoration: underline;
 }
