--- a/source/views/_landing.html.slim
+++ b/source/views/_landing.html.slim
@@ -2,7 +2,7 @@
   / // Drawings
   #lighthouse = image_tag('icons/lighthouse.svg')
   / #park       = image_tag('icons/park.svg')
-  
+
   #catchline
     h2.flexbox.flexbox-around
       div = t 'catchline'
@@ -13,13 +13,4 @@
         = image_tag 'icons/chat.svg', width: '15%'
         = t :call_to_action
 
-  #testimonials
-    .flexbox.flexbox-bottom.flexbox-around.wrap
-      - data.testimonial_authors.each_with_index do |author, index|
-        .testimonial
-          .testimonial-description = author.testimonial
-          .testimonial-author
-            .author-name = author.name
-            .author-position = author.position
-
-          = image_tag "pictures/#{author.picture}", class: 'author-picture'
+  = partial 'views/testimonials'
