--- a/source/views/_header.html.slim
+++ b/source/views/_header.html.slim
@@ -1,5 +1,4 @@
-/ header.hidden
-header
+header.hidden
   #logo.flexbox.flexbox-center.flexbox-bottom
     = image_tag 'weelab-logo-transparent.png', alt: 'logo Weelab', width: '100px'
     h1 Weelab
