--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,5 +2,6 @@
 title: Weelab
 ---
 
-= partial 'views/header'
+/ = partial 'views/header'
 = partial 'views/landing'
+= partial 'views/testimonials'
