--- a/source/stylesheets/_landing.scss
+++ b/source/stylesheets/_landing.scss
@@ -10,7 +10,7 @@ $margin-bottom: 2%;
 }
 
 #lighthouse{
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: $margin-bottom;
   width: 20%;
@@ -40,4 +40,21 @@ $margin-bottom: 2%;
   margin: auto;
   border-radius: 4px;
   box-shadow: 0 2px 2px #7a7a7a;
+}
+
+.social-links{
+  font-size: 4em;
+  color: #fafafa;
+  text-align: center;
+}
+
+.social-link{
+  padding: 10px;
+  margin: auto;
+  &:hover{
+    animation: heartbeat 1.5s ease-in-out infinite both;
+  }
+  a{
+    color: inherit;
+  }
 }
