--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,8 @@
 
     <%= partial "metatags" %>
 
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <%= stylesheet_link_tag "index" %>
   </head>
   <body>
