--- a/source/views/_landing.html.slim
+++ b/source/views/_landing.html.slim
@@ -1,8 +1,4 @@
 #landing
-  / // Drawings
-  #lighthouse = image_tag('icons/lighthouse.svg')
-  / #park       = image_tag('icons/park.svg')
-
   #catchline
     h2.flexbox.flexbox-around
       div = t 'catchline'
@@ -13,4 +9,8 @@
         = image_tag 'icons/chat.svg', width: '15%'
         = t :call_to_action
 
-  = partial 'views/testimonials'
+  = partial 'views/social_links'
+
+  // Drawings
+  #lighthouse = image_tag('icons/lighthouse.svg')
+  / #park       = image_tag('icons/park.svg')
