--- a/source/stylesheets/_utilities.scss
+++ b/source/stylesheets/_utilities.scss
@@ -1,3 +1,5 @@
+$margin-bottom: 2%;
+
 html{
   height: 100%;
 }
@@ -6,6 +8,7 @@ body{
   position: relative;
   min-height: 100%;
   padding-bottom: 70px;
+  background-color: $blue;
 }
 
 .underline{
