--- a/source/stylesheets/_landing.scss
+++ b/source/stylesheets/_landing.scss
@@ -20,7 +20,7 @@
 
 #go-to-typeform{
   background-color: $red;
-  width: 50%;
+  text-align: center;
   max-width: 300px;
   cursor: pointer;
   padding: 15px;
